added profile image and contact details

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
          .vtimeline-content small{
             float: right;
             color: #778295;
-         }  
+         } 
+         #lead-content h3{
+             color: floralwhite;
+        }
+        .profile-pic {
+            box-shadow: 0px 4px 6px 2px lightgrey;
+            border-radius: 50%;
+            padding: 5px;
+            margin: 10px;
+        }
     </style>
 </head>
 
@@ -54,9 +63,12 @@
 
     <div id="lead">
         <div id="lead-content">
+            <img src="images/profile.jpeg" width="200" class="profile-pic" alt="SUJIT BHANDARI">
             <h1>SUJIT BHANDARI</h1>
             <h2>I'm a full-stack web developer</h2>
-            <a href="Sujit_Bhandari_Resume.pdf" download class="btn-rounded-white">Download Resume</a>
+            <h3><i class="fa fa-envelope-square fa-lg"></i> bhandarisujit@gmail.com</h3>
+            <h3><i class="fa fa-mobile fa-lg"></i> 9890358431</h3>
+            <a href="Sujit_Bhandari_Resume.pdf" download class="btn-rounded-white"><i class="fa fa-download fa-lg"></i> Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
