--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
             padding: 5px;
             margin: 10px;
         }
+        .mt-4{
+            margin-top: 4px;
+        }
+        .custom-btn{
+            display: inline-block;
+            margin: 7px;
+            padding: 5px 10px;
+            color: #374054;
+            background: #e4e4ea;
+            list-style: none;
+            cursor: default;
+            font-size: 1.2em;
+        }
     </style>
 </head>
 
@@ -91,7 +104,35 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Since beginning my journey as a junior web developer nearly 8 years ago, I've done remote work for companies, collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my chops one design problem at a time.
+                        Since beginning my journey as a junior web developer nearly <b>10</b> years ago, I've done remote work for companies, collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually working on improving my skills.
+                    </p>
+                    <br><br>
+                    <p>
+                    <b>Professional Experience:</b><br><br>
+
+                    <b>Web Developer:</b> Employed in a senior and leadership role, i am responsible for overseeing and contributing to complex web development projects. my expertise in various programming languages, frameworks, and technologies which allows me to architect and build scalable, efficient, and secure web applications.<br>
+
+                    <b>Technical Lead:</b> I also transitioned into a leadership role where i lead a team of developers. where my responsibilities include project management, code reviews, mentoring, and ensuring the successful delivery of web projects.<br>
+
+                    <b>Specialized Expertise:</b> Over the years, i am specialized in areas of web development. This include front-end development (HTML, CSS, JavaScript, and various frameworks like React, Vue), back-end development (Node.js, Python, PHP), full-stack development.<br><br>
+
+                    <b>Skills and Expertise:</b><br><br>
+
+                    <b>Programming Languages:</b> Proficient in multiple programming languages, such as PHP, JavaScript, Python.<br>
+
+                    <b>Web Technologies:</b> Extensive experience with web technologies like HTML5, CSS3, JavaScript frameworks (e.g., React, Vue), and server-side technologies (PHP, Node.js).<br>
+
+                    <b>Database Management:</b> Skilled in working with various databases such as MySQL, PostgreSQL, MongoDB, including database design, optimization, and maintenance.<br>
+
+                    <b>DevOps and Deployment:</b> Proficient in deploying and maintaining web applications in cloud environments (AWS), and experienced with CI/CD pipelines, containerization (Docker), and infrastructure as code.<br>
+
+                    <b>Security:</b> Knowledgeable about web application security best practices, including protecting against common vulnerabilities like XSS, SQL injection, and CSRF.<br>
+
+                    <b>Agile and Project Management:</b> Familiar with Agile methodologies (Scrum) and project management tools, ensuring efficient project execution and collaboration.<br>
+
+                    <b>Version Control:</b> Proficient in using version control systems like Git for tracking changes and collaborating with team members.<br>
+
+                    <b>Soft Skills:</b> Strong problem-solving skills, excellent communication, and teamwork abilities. As a seasoned professional,  adept at collaborating with cross-functional teams, communicating technical concepts to non-technical stakeholders, and providing mentorship to junior developers.
                     </p>
                 </div>
             </div>
@@ -102,6 +143,10 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="May 2021 – Now">
+                <h3>Freelancer and consultant</h3>
+                <small>Warje, Pune</small>
+            </div>
             <div data-date="May 2016 – May 2021">
                 <h3>Webwide IT Solutions LLP</h3>
                 <small>Warje, Pune</small>
@@ -198,6 +243,53 @@
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
+                    <a href="https://www.namasto.de">
+                        <div class="project-image">
+                            <img src="images/namasto.png" />
+                        </div>
+                    </a>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Online Food Order</h3>
+                        <p>                            
+                            Online food order !! Namasto.de germany base group of restaurants with individual websites and apps in both ios and android... 
+                        </p>
+                        <a href="https://www.namasto.de" class="custom-btn">View Project</a>
+                        <div class="d-flex justify-content-center app-store-wrap mb-5 mt-4">
+                            <div class="w-100 text-center text-md-right">
+                                <div class="app-store-wrap">
+                                    <a href="https://apps.apple.com/app/namasto-essen-bestelle/id1602372234" class="d-inline mr-2" target="_blank">
+                                        <img src="images/app-store@2x.png" width="100px" height="30px">
+                                    </a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.namasto.customer" class="d-inline" target="_blank">
+                                        <img src="images/google-play@2x.png" width="100px" height="30px">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+
+                <div class="project shadow-large">
+                    <a href="http://online.acumentoday.net/mit/">
+                        <div class="project-image">
+                            <img src="images/lms.png" />
+                        </div>
+                    </a>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>LMS</h3>
+                        <p>                            
+                            Learning Management System !! designed for schools and institutes where online class and exams and courses can conduct smoothly... 
+                        </p>
+                        <a href="http://online.acumentoday.net/mit" class="custom-btn">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+
+
+                <div class="project shadow-large">
                     <a href="https://www.halloessen.de">
                         <div class="project-image">
                             <img src="images/halloessen.png" />
@@ -205,16 +297,46 @@
                     </a>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Halloessen.de</h3>
+                        <h3>Multivendor Online Food Order</h3>
                         <p>                            
-                            Order food online! Find the best restaurants near you. Serving in Jena, Leipzig, Erfurt, Weimar, Nordhausen, Gera, Saalfeld ... 
+                            Order food online !! Halloessen.de Find the best restaurants near you. Serving in Jena, Leipzig, Erfurt, Weimar, Nordhausen, Gera, Saalfeld ... 
                         </p>
-                        <a href="https://www.halloessen.de">View Project</a>
+                        <a href="https://www.halloessen.de" class="custom-btn">View Project</a>
+                        <div class="d-flex justify-content-center app-store-wrap mb-5 mt-4">
+                            <div class="w-100 text-center text-md-right">
+                                <div class="app-store-wrap">
+                                    <a href="https://apps.apple.com/in/app/hallo-essen-essensbestellung/id1492908312" class="d-inline mr-2" target="_blank">
+                                        <img src="images/app-store@2x.png" width="100px" height="30px">
+                                    </a>
+                                    <a href="https://play.google.com/store/apps/details?id=de.halloessen.food" class="d-inline" target="_blank">
+                                        <img src="images/google-play@2x.png" width="100px" height="30px">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
 
+                <div class="project shadow-large">
+                    <a href="http://transmission.org.in/sbts/public/">
+                        <div class="project-image">
+                            <img src="images/sbts.png" />
+                        </div>
+                    </a>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>School Bus Tracking</h3>
+                        <p>                            
+                            School bus track !! application for parents, both driver and parent apps are developed
+                        </p>
+                        <a href="http://transmission.org.in/sbts/public/" class="custom-btn">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                
                 <div class="project shadow-large">
                     <a href="https://indus-valley.de/">
                         <div class="project-image">
@@ -223,11 +345,11 @@
                     </a>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Indus Valley</h3>
+                        <h3>Online Grocery</h3>
                         <p>
-                            Online Grocery Shopping : Choose from a wide range of grocery, personal care products, snacks, drinks, spices and spice blends. Pay Online ...
+                            Online Grocery !! Choose from a wide range of grocery, personal care products, snacks, drinks, spices and spice blends. Pay Online ...
                         </p>
-                        <a href="https://indus-valley.de/">View Project</a>
+                        <a href="https://indus-valley.de/" class="custom-btn">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -241,11 +363,11 @@
                     </a>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Constructioncareers.in</h3>
+                        <h3>Job Portal</h3>
                         <p>
-                            Construction Careers, India's job portal for Construction. Find latest Construction jobs in India. Auto CAD, Civil Project Management, Site Supervision​, ...
+                            Job Portal !! Construction Careers India's job portal for Construction. Find latest Construction jobs in India. Auto CAD, Civil Project Management, Site Supervision​, ...
                         </p>
-                        <a href="https://constructioncareers.in">View Project</a>
+                        <a href="https://constructioncareers.in" class="custom-btn">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -263,7 +385,7 @@
                         <p>
                             Streamii is a secure file storage, smart workstation where artist, fans, costumers and content meet each other.
                         </p>
-                        <a href="https://streamii.de/">View Project</a>
+                        <a href="https://streamii.de/" class="custom-btn">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -279,7 +401,9 @@
         <ul>
             <li>JavaScript</li>
             <li>PHP</li>
-            <li>Node.js</li>
+            <li>Python</li>
+            <li>Node</li>
+            <li>Vue</li>
             <li>React</li>
             <li>React Native</li>
             <li>MySQL</li>
